Fixed broken info modal and link styling

--- a/css/paulynomial.css
+++ b/css/paulynomial.css
@@ -109,6 +109,12 @@ a.button:hover {
   min-height: 350px;
 }
 
+.modal-content p a {
+  color: #343434;
+  font-style: italic;
+  text-decoration: none;
+}
+
 .about-animation {
   position: absolute;
   top: 5px;
@@ -129,9 +135,11 @@ a.button:hover {
 
 .about-animation-content {
   width: 250px;
-  position: relative;
+  position: fixed;
   float: right;
-  display: hidden;
+  bottom: 0px;
+  right: 0px;
+  display: none;
   font-size: 0.7em;
   z-index: 2;
   margin-top: 15px;
